# lxplug-bluetooth

./: .gitignore  Makefile  Makefile.am  README  config.h.in  config.status  configure.ac  copy_files.sh  libtool  meson.build  pkglist.txt
autom4te.cache/: output.0  requests  traces.0
data/: Makefile  Makefile.am  lxplug-bluetooth.ui  meson.build
debian/: changelog  control  copyright  lxplug-bluetooth.install  rules  wfplug-bluetooth.install
man/: Makefile
plugins/: Makefile  Makefile.am  Makefile.in  batt.la  cpu.la  cpufreq.la  deskno.la  kbled.la  monitors.la  netstat.la  netstatus.la  thermal.la  volume.la  weather.la  xkb.la
plugins/.deps/: libbuiltin_plugins_a-dclock.Po  libbuiltin_plugins_a-dirmenu.Po  libbuiltin_plugins_a-launchtaskbar.Po  libbuiltin_plugins_a-menu.Po  libbuiltin_plugins_a-pager.Po  libbuiltin_plugins_a-separator.Po  libbuiltin_plugins_a-space.Po  libbuiltin_plugins_a-tray.Po  libbuiltin_plugins_a-wincmd.Po
plugins/.libs/: batt.exp  batt.la  batt.lai  batt.ver  cpu.exp  cpu.lai  cpufreq.la  cpufreq.lai  deskno.la  deskno.lai  kbled.la  kbled.lai  monitors.la  monitors.lai  netstat.exp  netstat.la  netstat.lai  netstat.ver  netstatus.exp  netstatus.la  netstatus.lai  netstatus.ver  thermal.la  thermal.lai  thermal.ver  volume.exp  volume.la  volume.lai  volume.ver  weather.exp  weather.la  weather.lai  weather.ver  xkb.exp  xkb.la  xkb.lai  xkb.ver
plugins/bluetooth/: bluetooth.c  obex.c  obex.h
po/: Makefile  Makefile.in  POTFILES.in  de.gmo  en_GB.po  fr.gmo  hy.po  is.po  it.po  ja.po  ko.po  meson.build  nb.po  nl.gmo  ru.gmo  sk.po  zh_CN.po
src/: Makefile  bluetooth.c  bluetooth.cpp  bluetooth.h  bluetooth.hpp  lxpanel  lxpanelctl  meson.build
src/.deps/: lxpanel-bg.Po  lxpanel-conf.Po  lxpanel-configurator.Po  lxpanel-dbg.Po  lxpanel-ev.Po  lxpanel-gtk-run.Po  lxpanel-icon-grid-old.Po  lxpanel-icon-grid.Po  lxpanel-menu-policy.Po  lxpanel-misc.Po  lxpanel-panel.Po  lxpanel-plugin.Po  lxpanelctl.Po
